Fix org card spacing

--- a/src/app/starredentries/starredentries.component.scss
+++ b/src/app/starredentries/starredentries.component.scss
@@ -106,3 +106,12 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 }
+
+.org-overflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: initial;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
