--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1027,6 +1027,7 @@ hr {
 .small-org-logo {
   height: 50px;
   object-fit: scale-down;
+  max-width: 250px;
 }
 
 .big-org-logo {
